--- a/src/static/src/styles/pages/_projects.scss
+++ b/src/static/src/styles/pages/_projects.scss
@@ -34,7 +34,6 @@
 }
 
 .project__media__items {
-    overflow: hidden;
     padding: 0;
     margin: 3rem 0 0 0;
 }
